OhGrtApi/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ohgrt
  labels:
    app.kubernetes.io/name: ohgrt
    app.kubernetes.io/part-of: ohgrt
