OhGrtApi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohgrt-api
  namespace: ohgrt
  labels:
    app.kubernetes.io/name: ohgrt-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: ohgrt-api
